--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <div class="hero"></div>
-    <main="content">
+    <main class="content">
         <section class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="note pad with suggestions on how to improve seo" />
             <h2>Search Engine Optimization</h2>
