changed one alt attribute

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </article>
         <article class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="portraying brand Awareness" />
+            <img src="./assets/images/brand-awareness.png" alt="dollar sign in place instead of a head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
